Replaced sun.misc.BASE64Decoder with java.utils.Base64